Fix bad layout when dropbox is not configured, improve readability a little

--- a/src/mystyle.css
+++ b/src/mystyle.css
@@ -1,7 +1,7 @@
 #mainTerminal {
     float: left;
     background-color: "green";
-    max-width: 40%;
+    max-width: 35%;
 }
 
 #mainTerminal button {
